# auto-balatro

./: .gitignore  config.yaml  pyproject.toml  requirements.txt
src/: __init__.py
src/agent/: __init__.py  evaluator.py  player.py  policy.py  trainer.py
src/capture/: __init__.py  screen.py  window.py
src/executor/: __init__.py  actions.py  coordinator.py  input_backend.py  mouse.py
src/game/: __init__.py  constants.py  environment.py  hand_evaluator.py  joker_effects.py  state_machine.py
src/utils/: __init__.py  config.py  logger.py
src/vision/: __init__.py  card_detector.py  feature_matcher.py  ocr.py  state_detector.py  template_matcher.py
tests/: test_evaluator.py  test_feature_matcher.py  test_player.py  test_policy.py  test_trainer.py
