[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-balatro"
version = "0.1.0"
description = "Automated Balatro player using CV and Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Auto-Balatro Team"}
]
keywords = ["balatro", "reinforcement-learning", "computer-vision", "game-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pywin32>=306",
    "torch>=2.0.0",
    "stable-baselines3>=2.1.0",
    "sb3-contrib>=2.1.0",
    "gymnasium>=0.29.0",
    "tensorboard>=2.14.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
windows = [
    "dxcam>=0.0.5",
]

[project.scripts]
auto-balatro = "src.main:main"
train-balatro = "src.agent.trainer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
